--- a/styles.css
+++ b/styles.css
@@ -9,14 +9,14 @@
 /* Import TT Hoves font */
 @font-face {
     font-family: 'TT Hoves';
-    src: url('fonts/TT-Hoves-Regular.ttf') format('truetype');
+    src: url('fonts/Poppins-Medium.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'TT Hoves';
-    src: url('fonts/TT-Hoves-Bold.ttf') format('truetype');
+    src: url('fonts/Poppins-Regular.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
 }
@@ -39,6 +39,8 @@ h3 {
     color: #ffffff;
     margin: 0;
 }
+
+
 
 
 
@@ -119,11 +121,27 @@ header {
     text-align: center;
 }
 
+
+
 @media (max-width: 1300px) {
   .title-container {
     top: 35vh;                 /* move it slightly up */
     white-space: normal;       /* allow wrapping on very small screens */
     width: 90%;
+  }
+  .h2-container {
+    top: 85vh;                 /* move it slightly up */
+    white-space:initial;       /* allow wrapping on very small screens */
+    width: 100%;
+    font-size: 5vh;
+  }
+   .h3-container {
+    top: 89vh;                 /* move it slightly up */
+    white-space:unset;       /* allow wrapping on very small screens */
+    width: 100%;
+    font-size: 4vh;
+    font-weight: normal;
+    font-style: normal;
   }
 }
 
@@ -154,7 +172,7 @@ header {
 
 .white-section {
     background-color: white;
-    height: 10000px;
+    height: 8000px;
     width: 100%;
     margin-top: 100vh;
     position: relative;
@@ -166,34 +184,38 @@ header {
 
    /* Container to hold the greenbox image and left align */
 .fixed-left {
+    margin-top: 140px;
     display: flex;
-    justify-content: flex-start; /* Center image horizontally */
+    justify-content: center; /* Center image horizontally */
     align-items: center; /* Center image vertically */
     width: 100%; /* Make the container take full width */
 }
 
 /* Ensure the image stays at a fixed size */
 .fixed-left img {
-    width: auto; /* Maintain the aspect ratio of the image */
-    height: auto; /* Allow the height to adjust proportionally */
-    max-width: 80%; /* Optional: limit the width to prevent image from being too large */
+    width: 100%; /* Maintain the aspect ratio of the image */
+    height: 100%; /* Allow the height to adjust proportionally */
+    max-width: 100%; /* Optional: limit the width to prevent image from being too large */
 }
 
 
 /* Container to hold the grouped image and center it */
 .grouped-image {
-    margin-top: -25px;
     display: flex;
-    justify-content: right; /* Center image horizontally */
+    justify-content: center; /* Center image horizontally */
     align-items: center; /* Center image vertically */
     width: 100%; /* Make the container take full width */
 }
 
 /* Ensure the image stays at a fixed size */
 .grouped-image img {
-    width: auto; /* Maintain the aspect ratio of the image */
-    height: auto; /* Allow the height to adjust proportionally */
-    max-width: 80%; /* Optional: limit the width to prevent image from being too large */
+  width: 100%; /* Maintain the aspect ratio of the image */
+    height: 100%; /* Allow the height to adjust proportionally */
+    max-width: 100%; /* Optional: limit the width to prevent image from being too large */
 }
+
+
+
+
 
 
